removed @CrossOrigin annotation on the Controller class and useing the filter instead now. MAKE SURE NOT TO HAVE BOTH!